tailwind overhaul pt 3

--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -215,18 +215,18 @@
           <ul id="footerNavOwner">
             <li>
               <div id="homeButton" class="icon">
-                <a class="text-2xl font-bold" href="/index">&#8962;</a>
+                <a class="icon-style" href="/index">&#8962;</a>
               </div>
             </li>
             <li>
               <div class="icon">
-                <a class="text-2xl font-bold" href="/popular">&#10066;</a>
+                <a class="icon-style" href="/popular">&#10066;</a>
               </div>
             </li>
             <li>
               <div class="icon">
                 <a
-                  class="text-2xl font-bold"
+                  class="icon-style"
                   th:href="@{/create-item/{collectionId}(collectionId=${collection?.id})}"
                 >
                   &#43;
@@ -252,7 +252,7 @@
           <ul id="footerNavUser">
             <li>
               <div class="icon">
-                <a class="text-2xl font-bold" href="/index">&#8962;</a>
+                <a class="icon-style" href="/index">&#8962;</a>
               </div>
             </li>
             <li>
