--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -195,6 +195,11 @@
     justify-content: center;
   }
 
+  .icon-style  {
+    font-size: 1.5rem; /* Equivalent to text-2xl */
+    font-weight: bold;  /* Equivalent to font-bold */
+  }
+
   .caption-container {
     width: 100%;
     padding-left: 0.5rem;
@@ -255,6 +260,20 @@
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
   }
+
+  .profile-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 0.875rem;
+    font-weight: 300;
+    margin-left: 0.25rem;
+    margin-right: 0.25rem;
+    margin-bottom: 0.25rem;
+    border-radius: 0.375rem !important;
+  }
+
 }
 
 @layer utilities {
