--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar">
+      <nav>
         <ul class="flex justify-center items-center w-full">
           <li>
             <a href="/index">
